Fix audio source path in index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- MUSIC (FIXED) -->
     <audio id="music" loop preload="auto">
-        <source src="music/belongs-together.mp3" type="audio/mpeg">
+        <source src="belongs-together.mp3" type="audio/mpeg">
     </audio>
 
     <!-- MESSAGE -->
@@ -78,3 +78,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
