Fix audio filename and update letter heading
Updated audio source filename and adjusted letter heading.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- MUSIC (FIXED) -->
     <audio id="music" loop preload="auto">
-        <source src="belongs-together.mp3" type="audio/mpeg">
+        <source src="BelongsTogether.mp3" type="audio/mpeg">
     </audio>
 
     <!-- MESSAGE -->
@@ -59,7 +59,7 @@
 
     <!-- LETTER -->
     <div id="letter" class="letter hidden">
-        <h2>💖 My Love Letter 💖</h2>
+        <h2>💖 Letter 💖</h2>
         <p>
             My love,<br><br>
             From the moment you came into my life, everything changed.
@@ -69,7 +69,7 @@
             I promise to stand by you, love you endlessly, and choose you
             every single day. You are my today, my tomorrow, and my forever. ❤️<br><br>
 
-            Happy Birthday, my cutiee bachaaa 💞
+            Happy Birthday Merii Betuuuu 💞
         </p>
     </div>
 
@@ -78,4 +78,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
