--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- MUSIC (FIXED) -->
     <audio id="music" loop preload="auto">
-        <source src="BelongsTogether" type="audio/mpeg">
+        <source src="BelongsTogether.mp3" type="audio/mpeg">
     </audio>
 
     <!-- MESSAGE -->
@@ -78,6 +78,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
